--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,11 @@ uuid = "d4351ba0-2d5c-4db0-b06c-903428c7bcf5"
 authors = ["Tero Frondelius", "Ivan Yashchuk"]
 version = "0.1.0"
 
+[deps]
+BinaryProvider = "b99e7846-7c00-51b0-8f62-c81ae34c0232"
+Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
 [compat]
 julia = "1"
 
