--- a/Project.toml
+++ b/Project.toml
@@ -15,8 +15,9 @@ Materials = ">= 0.2.0"
 julia = "1"
 
 [extras]
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Suppressor", "Test"]
+test = ["DelimitedFiles", "Suppressor", "Test"]
