--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Materials = "35fa313e-aa48-52ea-bc82-ddb91c7db87b"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
+Tensors = "48a634ad-e948-5137-8d70-aa71f2a747f4"
 
 [compat]
 Materials = ">= 0.2.0"
